@@ -28,25 +28,6 @@ sourceSets {
             "idea-live-templates/tests"
         )
     }
-
-    "performanceTest" {
-        java.srcDirs("performanceTests")
-    }
-}
-
-val performanceTestCompile by configurations
-performanceTestCompile.apply {
-    extendsFrom(configurations["testCompile"])
-}
-
-val performanceTestCompileOnly by configurations
-performanceTestCompileOnly.apply {
-    extendsFrom(configurations["testCompileOnly"])
-}
-
-val performanceTestRuntime by configurations
-performanceTestRuntime.apply {
-    extendsFrom(configurations["testRuntime"])
 }
 
 dependencies {
@@ -75,12 +56,13 @@ dependencies {
     compile(project(":idea:jvm-debugger:jvm-debugger-core"))
     compile(project(":idea:jvm-debugger:jvm-debugger-evaluation"))
     compile(project(":idea:jvm-debugger:jvm-debugger-sequence"))
+    compile(project(":idea:jvm-debugger:jvm-debugger-coroutine"))
     compile(project(":j2k"))
     compile(project(":idea:idea-j2k"))
     compile(project(":idea:formatter"))
-    compile(project(":idea:fir-view"))
     compile(project(":compiler:fir:fir2ir"))
     compile(project(":compiler:fir:resolve"))
+    compile(project(":compiler:fir:checkers"))
     compile(project(":compiler:fir:java"))
     compile(project(":compiler:fir:jvm"))
     compile(project(":idea:idea-core"))
@@ -106,6 +88,9 @@ dependencies {
 
     Platform[193].orHigher {
         implementation(commonDep("org.jetbrains.intellij.deps.completion", "completion-ranking-kotlin"))
+        Ide.IJ {
+            implementation(intellijPluginDep("stats-collector"))
+        }
     }
 
     compileOnly(commonDep("org.jetbrains", "markdown"))
@@ -116,6 +101,7 @@ dependencies {
     compileOnly(intellijPluginDep("java-i18n"))
     compileOnly(intellijPluginDep("gradle"))
 
+    testCompileOnly(toolsJar())
     testCompileOnly(project(":kotlin-reflect-api")) // TODO: fix import (workaround for jps build)
     testCompile(project(":kotlin-test:kotlin-test-junit"))
     testCompile(projectTests(":compiler:tests-common"))
@@ -128,9 +114,7 @@ dependencies {
     testCompile(commonDep("junit:junit"))
     testCompileOnly(intellijPluginDep("coverage"))
 
-    testRuntime(project(":kotlin-native:kotlin-native-library-reader")) { isTransitive = false }
-    testRuntime(project(":kotlin-native:kotlin-native-utils")) { isTransitive = false }
-
+    testRuntimeOnly(toolsJar())
     testRuntime(commonDep("org.jetbrains", "markdown"))
     testRuntime(project(":plugins:kapt3-idea")) { isTransitive = false }
     testRuntime(project(":kotlin-reflect"))
@@ -174,6 +158,10 @@ dependencies {
     if (Ide.IJ()) {
         testCompileOnly(intellijPluginDep("maven"))
         testRuntime(intellijPluginDep("maven"))
+
+        if (Ide.IJ201.orHigher()) {
+            testRuntime(intellijPluginDep("repository-search"))
+        }
     }
 
     testRuntime(intellijPluginDep("junit"))
@@ -189,15 +177,7 @@ dependencies {
         testRuntime(intellijPluginDep("git4idea"))
         testRuntime(intellijPluginDep("google-cloud-tools-core-as"))
         testRuntime(intellijPluginDep("google-login-as"))
-        testRuntime(intellijPluginDep("android-wizardTemplate-plugin"))
     }
-
-    performanceTestCompile(sourceSets["test"].output)
-    performanceTestCompile(sourceSets["main"].output)
-    performanceTestCompile(project(":nj2k"))
-    performanceTestCompile(project(":idea:idea-gradle-tooling-api"))
-    performanceTestCompile(intellijPluginDep("gradle"))
-    performanceTestRuntime(sourceSets["performanceTest"].output)
 }
 
 tasks.named<Copy>("processResources") {
@@ -211,35 +191,6 @@ projectTest(parallel = true) {
     workingDir = rootDir
 }
 
-projectTest(taskName = "performanceTest") {
-    dependsOn(":dist")
-    dependsOn(performanceTestRuntime)
-
-    testClassesDirs = sourceSets["performanceTest"].output.classesDirs
-    classpath = performanceTestRuntime + files("${System.getenv("ASYNC_PROFILER_HOME")}/build/async-profiler.jar")
-    workingDir = rootDir
-
-    jvmArgs?.removeAll { it.startsWith("-Xmx") }
-
-    maxHeapSize = "3g"
-    jvmArgs("-Didea.debug.mode=true")
-    jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=50")
-    jvmArgs(
-        "-XX:ReservedCodeCacheSize=240m",
-        "-XX:+UseCompressedOops",
-        "-XX:+UseConcMarkSweepGC"
-    )
-
-    doFirst {
-        systemProperty("idea.home.path", intellijRootDir().canonicalPath)
-        project.findProperty("cacheRedirectorEnabled")?.let {
-            systemProperty("kotlin.test.gradle.import.arguments", "-PcacheRedirectorEnabled=$it")
-        }
-    }
-}
-
-testsJar {
-    from(sourceSets["performanceTest"].output)
-}
-
 configureFormInstrumentation()
+
+testsJar()
